[project]
name = "velmora-incident-env"
version = "0.1.0"
description = "OpenEnv environment for incident response simulation"
authors = [
    {name = "Khushi Ramchandani"}
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "openai==1.50.2",
]

[project.scripts]
velmora-server = "server.app:main"

[tool.setuptools]
packages = ["velmora_env", "baseline", "server"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"