[project]
name = "velmora-incident-env"
version = "0.1.0"
description = "OpenEnv environment for incident response simulation"
authors = [
    {name = "Khushi Ramchandani"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.scripts]
velmora-server = "server.app:main"

[tool.setuptools]
packages = ["velmora_env", "server"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"