[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velmora-incident-env"
version = "1.0.0"
description = "OpenEnv environment for incident response simulation"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.5.0",
    "fastapi==0.104.0",
    "uvicorn==0.24.0",
    "openai>=2.7.2",
    "python-dotenv==1.0.0",
    "httpx==0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
velmora-server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["velmora_env*", "server*"]
